aarlo/pyaarlo
0.7.1.8: Added battery device class
0.7.1.7: Added width/height to camera_image method
         Don't get resources from Wired doorbells.
0.7.1.6: Support IMAP port.
         Don't get resources from Essential cameras.
0.7.1.5: Reduced ping commands
0.7.1.4: Reduced ping commands
0.7.1.3: Better schedule handling.
         Run event handlers in the background thread.
0.7.1.2: Fix headers after tidy up.
0.7.1.1: Add GO camera support.
         Add video_url to last_capture sensor.
         Cache authentication token.
0.7.1: Remove double connected doorbell entity.
0.7.1b15: Allow quoted printable in tfa email from Arlo.
0.7.1b14: Fix for Home Assistant beta.
0.7.1b13: Fix wirefree doorbell duplicate entries.
0.7.1b12: Fix wirefree doorbell drain.
0.7.1b11: Added new automation return value.
0.7.1b10: Fix plugged icon.
0.7.1b9: Add cloudscraper support.
0.7.1b7: Stop HA polling us.
        Allow removal of unicode characters from entity ids
        Siren on wired doorbell.
        Better doorbell icon.
0.7.1b6: Add new event handling
        Allow custimisable disarmed mode
0.7.1b5: Don't rely on camera reporting back idle status
0.7.1b4: Smart user agents.
0.7.1b3: Fixed for 2021.3
0.7.1b1: Add media download.

0.7.0.18: Update user agent and request headers.
0.7.0.6: Stop battery drain on any battery based base station.
0.7.0.5: Fix CameraMJpeg issues.
0.7.0.4: Handle broken modes fetch.
0.7.0.3: Handle broken library fetch.
0.7.0.2: Made mode refresh optional.
0.7.0: Added PUSH support for authentication.
        Fixed missing stream state.
0.7.0.beta.7 Make platform startup async
        Fix mode change issue
0.7.0.beta.6 Fix mode update.
0.7.0.beta.5 Fix mode update.
        Fix possible log in issue.
0.7.0.beta.4 Support base reset
        Better snapshot handling.
0.7.0.beta.2 Handle no basestations.
        Print a traceback on background failure.
        Automatically write image updates to file.
        Fix arming retry.