@@ -482,18 +482,14 @@ class ArloBase(ArloDevice):
                 return True
             if self.is_own_parent and self.using_wifi and not self.is_corded:
                 return False
-            # Wire free video doorbell acting as base station
-            if (
-                self.is_own_parent
-                and self.model_id.startswith(
-                    (
-                        MODEL_WIREFREE_VIDEO_DOORBELL,
-                        MODEL_ESSENTIAL,
-                        MODEL_PRO_3_FLOODLIGHT,
-                        MODEL_PRO_4,
-                    )
+            # Don't ping these devices ever.
+            if self.model_id.startswith(
+                (
+                    MODEL_WIREFREE_VIDEO_DOORBELL,
+                    MODEL_ESSENTIAL,
+                    MODEL_PRO_3_FLOODLIGHT,
+                    MODEL_PRO_4,
                 )
-                and not self.is_corded
             ):
                 return False
             return True
