@@ -1,5 +1,6 @@
 aarlo/pyaarlo
 0.7.1.8: Added battery device class
+         Stop polling certain devices.
 0.7.1.7: Added width/height to camera_image method
          Don't get resources from Wired doorbells.
 0.7.1.6: Support IMAP port.
